src/snapshots/crochet__parser__tests__async_await.snap
---
source: src/parser.rs
expression: "parse(\"async () => 10\")"
---
Program {
    body: [
        Expr {
            span: 0..14,
            expr: Lambda(
                Lambda {
                    span: 0..14,
                    args: [],
                    body: Lit(
                        Num(
                            Num {
                                span: 12..14,
                                value: "10",
                            },
                        ),
                    ),
                    is_async: true,
                },
            ),
        },
    ],
}
