src/snapshots/crochet__parser__tests__declarations-2.snap
---
source: src/parser.rs
expression: "parse(\"let x = (a, b) => a + b\")"
---
Program {
    body: [
        Decl {
            span: 0..23,
            pattern: Ident(
                BindingIdent {
                    span: 4..5,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 8..23,
                    args: [
                        Ident(
                            BindingIdent {
                                span: 9..10,
                                id: Ident {
                                    span: 9..10,
                                    name: "a",
                                },
                                type_ann: None,
                            },
                        ),
                        Ident(
                            BindingIdent {
                                span: 12..13,
                                id: Ident {
                                    span: 12..13,
                                    name: "b",
                                },
                                type_ann: None,
                            },
                        ),
                    ],
                    body: Op(
                        Op {
                            span: 18..23,
                            op: Add,
                            left: Ident(
                                Ident {
                                    span: 18..19,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 22..23,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
