src/snapshots/crochet__parser__tests__declarations-4.snap
---
source: src/parser.rs
expression: "parse(\"let rec f = () => f()\")"
---
Program {
    body: [
        Decl {
            span: 0..21,
            pattern: Ident(
                BindingIdent {
                    span: 8..9,
                    id: Ident {
                        span: 8..9,
                        name: "f",
                    },
                    type_ann: None,
                },
            ),
            value: Fix(
                Fix {
                    span: 12..21,
                    expr: Lambda(
                        Lambda {
                            span: 12..21,
                            args: [
                                Ident(
                                    BindingIdent {
                                        span: 8..9,
                                        id: Ident {
                                            span: 8..9,
                                            name: "f",
                                        },
                                        type_ann: None,
                                    },
                                ),
                            ],
                            body: Lambda(
                                Lambda {
                                    span: 12..21,
                                    args: [],
                                    body: App(
                                        App {
                                            span: 18..21,
                                            lam: Ident(
                                                Ident {
                                                    span: 18..19,
                                                    name: "f",
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                    is_async: false,
                                },
                            ),
                            is_async: false,
                        },
                    ),
                },
            ),
        },
    ],
}
