src/snapshots/crochet__parser__tests__declarations.snap
---
source: src/parser.rs
expression: "parse(\"let x = 5\")"
---
Program {
    body: [
        Decl {
            span: 0..9,
            pattern: Ident(
                BindingIdent {
                    span: 4..5,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            value: Lit(
                Num(
                    Num {
                        span: 8..9,
                        value: "5",
                    },
                ),
            ),
        },
    ],
}
