src/snapshots/crochet__parser__tests__function_application-4.snap
---
source: src/parser.rs
expression: "parse(\"f(x)(g(x))\")"
---
Program {
    body: [
        Expr {
            span: 0..10,
            expr: App(
                App {
                    span: 0..10,
                    lam: App(
                        App {
                            span: 0..4,
                            lam: Ident(
                                Ident {
                                    span: 0..1,
                                    name: "f",
                                },
                            ),
                            args: [
                                Ident(
                                    Ident {
                                        span: 2..3,
                                        name: "x",
                                    },
                                ),
                            ],
                        },
                    ),
                    args: [
                        App(
                            App {
                                span: 5..9,
                                lam: Ident(
                                    Ident {
                                        span: 5..6,
                                        name: "g",
                                    },
                                ),
                                args: [
                                    Ident(
                                        Ident {
                                            span: 7..8,
                                            name: "x",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        },
    ],
}
